[gd_scene load_steps=9 format=3 uid="uid://7rvo0dymjiq3"]

[ext_resource type="Script" uid="uid://dojlwwgiwn6o6" path="res://ui/main_menu/character_select_panel.gd" id="1_vs8pe"]
[ext_resource type="Resource" uid="uid://45e0tpblxsns" path="res://actors/player/characters/master_character_list.tres" id="2_hv0rl"]
[ext_resource type="PackedScene" uid="uid://0rkl7hhg0sdp" path="res://ui/main_menu/character_button.tscn" id="4_i4rnc"]
[ext_resource type="Resource" uid="uid://c7go0mrrcgyyi" path="res://systems/upgrades/packs/melee_pack.tres" id="6_ykukb"]
[ext_resource type="Resource" uid="uid://bc8pfntixt6we" path="res://systems/upgrades/packs/test_pack.tres" id="7_neb2l"]
[ext_resource type="PackedScene" uid="uid://d1vkjj3tcx30h" path="res://ui/main_menu/upgrade_pack_button.tscn" id="7_ykukb"]
[ext_resource type="Script" uid="uid://cvcnhdf5np0ln" path="res://systems/upgrades/packs/upgrade_pack.gd" id="8_rbbip"]
[ext_resource type="Resource" uid="uid://cslvyly2f8qn1" path="res://systems/upgrades/packs/core_pack.tres" id="9_setnx"]

[node name="CharacterSelectPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vs8pe")
character_list = ExtResource("2_hv0rl")
character_button_scene = ExtResource("4_i4rnc")
all_packs = Array[ExtResource("8_rbbip")]([ExtResource("9_setnx"), ExtResource("6_ykukb"), ExtResource("7_neb2l")])
upgrade_pack_button_scene = ExtResource("7_ykukb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -44.5
offset_right = 132.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2

[node name="CharactersContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CharactersContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer/CharactersContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/CharactersContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CharactersContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="HBoxContainer/CharactersContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Back"

[node name="SelectAndStartButton" type="Button" parent="HBoxContainer/CharactersContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Select Character and Start
"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/CharactersContainer"]
layout_mode = 2

[node name="PacksContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/PacksContainer"]
layout_mode = 2
text = "Select Packs:"

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/PacksContainer"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/CharactersContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CharactersContainer/VBoxContainer/HBoxContainer/SelectAndStartButton" to="." method="_on_select_and_start_button_pressed"]
